[Sync] Record histogram of ModelTypeStoreBackend initialization result

This change records reasons of ModelTypeStoreBackend failures in UMA histogram.

BUG=684774
R=maxbogue@chromium.org,asvitkine@chromium.org

Review-Url: https://codereview.chromium.org/2666793002
Cr-Commit-Position: refs/heads/master@{#447610}

Former-commit-id: 8db816e5533f4447c4c4fabc6ad9be956f354c71